--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a href="/forms/destinations.html" class="nav__link">Destinations</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Services</a>
+              <a href="/forms/services.html" class="nav__link">Services</a>
             </li>
             <li class="nav__item"><a href="/forms/about.html" class="nav__link">About</a></li>
             <li class="nav__item">
