--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 
     <!-- stayConnected -->
 
-    <section class="stayconnected">
+    <section class="stayconnected" id="form-hai">
       <h1 style=" font-family: 'CustomFont2', sans-serif; font-size: 5rem;">STAY CONNECTED</h1>
       <h3>Gain access to our upcoming travel & events!</h3>
       <div class="form-div">
